--- a/foundry.toml
+++ b/foundry.toml
@@ -4,3 +4,5 @@ out = "out"
 libs = ["lib"]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+[dependencies]
+remappings = ["openzeppelin-contracts/=lib/openzeppelin-contracts/"]
